# kpi

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  LICENSE  README.md  RELEASE.md  RELEASE_0.2.0.md  RELEASE_NOTES.md  RELEASE_NOTES_0.2.0.md  package-lock.json  package.json
.cursor/rules/: kpi-development.mdc
.github/: BRANCH_PROTECTION.md  CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
public/: CHANGELOG.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate-icons.js  generate-icons.sh  icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: bugs.rs  config.rs  data.rs  developers.rs  mod.rs  reports.rs  tickets.rs  updater.rs  utils.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_bug_resolver.sql  003_add_indexes.sql  004_datetime_fields.sql  005_app_version.sql
src-tauri/src/models/: bug.rs  developer.rs  kpi.rs  mod.rs  ticket.rs
src-tauri/src/services/: kpi_calculator.rs  mod.rs  report_generator.rs
src/components/: UpdateChecker.tsx
src/components/bugs/: BugCard.tsx  BugFormDialog.tsx  index.ts
src/hooks/: index.ts  useBugs.ts  useDevelopers.ts  useKPI.ts  useTickets.ts
src/lib/: constants.ts  tauri.ts
src/pages/: Bugs.tsx  Dashboard.tsx  Developers.tsx  Reports.tsx  Settings.tsx  Tickets.tsx  index.ts
src/types/: bug.ts  developer.ts  index.ts  kpi.ts  ticket.ts
(+43 files in other folders)
