[package]
name = "kpi-tool"
version = "0.1.0"
description = "Developer KPI Tracking Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "kpi_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Async runtime (for potential future use)
tokio = { version = "1", features = ["sync"] }
